Updates for 1.11.0.20250911T090750Z
Dependency upgrades

- Backend - minor version upgrades:
  - Spring Boot 3.5.3
  - Spring Cloud 2025.0.0
  - JGit 7.3.0.202506031305-r
  - commons-beanutils 1.11.0

Features
- OIDC:
  - Support for JWE (JSON Web Encryption)
  - Fetching of OIDC client metadata for encryption key discovery
- WSTrust:
  - Support for RENEW request if enabled (not yet fully functional in this release)
- IDM:
  - Improvements for LDAP IDM interface

Improvmements
- Config:
  - IDM implementations can now be selected per query, allowing multiple implementations per RP
- SAML:
  - Allow AuthnRequest without AssertionConsumerServiceURL if enabled via AcWhitelist useDefault=true
- SSO:
  - Allow jointing SSO sessions with unsigned AuthnRequest if either requireSignedAuthnRequest=false or the new flag requireSignedAuthnRequestForSsoJoin=false
- QoA:
  - QoA handling is stricted with global policy enforceQoaIfMissing=true
  - Support downgrade CP response QoA to highest QoA requested by RP via downgradeToMaximumRequested
- Scripting:
  - CPResponse Groovy hook API methods aligned between all claim sources
  - Allow scripts to add parameters to OIDC CP authorization requests via context RpRequest.CONTEXT_OIDC_AUTHORIZATION_QUERY_PARAMETER
  - AfterProvisioning script hook added

Bugfixes
 - Config:
   - Fixed SubjectNameMappings for CP IDs that contain colons
 - OIDC:
   - The state parameter is now sends back to OIDC client on SAML responder errors
   - Multiple OIDC acr_values are now correctly handled as space separated, not comma separated
 - SAML:
   - AuthnStatement now contains the (optional but recommended) SessionNotOrAfter timestamp
   - Fixed serialization issue in SamlMock artifact cache
- SSO:
   - SessionNotOnOrAfter now considers refresh_token activity on the SSO session
   - No longer allow SSO if the AuthnRequest contains an invalid signature
 - QoA:
   - QoA enforcement now blocks properly in all cases also on RP side