@@ -28,6 +28,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.opensaml.saml.saml2.core.AuthnContextComparisonTypeEnumeration;
 import org.springframework.util.CollectionUtils;
 import org.springframework.util.StringUtils;
+import swiss.trustbroker.common.exception.ErrorCode;
 import swiss.trustbroker.common.exception.RequestDeniedException;
 import swiss.trustbroker.common.exception.TechnicalException;
 import swiss.trustbroker.federation.xmlconfig.AcClass;
@@ -35,6 +36,7 @@ import swiss.trustbroker.federation.xmlconfig.Qoa;
 import swiss.trustbroker.federation.xmlconfig.QoaComparison;
 import swiss.trustbroker.mapping.dto.CustomQoa;
 import swiss.trustbroker.mapping.dto.QoaConfig;
+import swiss.trustbroker.sessioncache.dto.StateData;
 
 /**
  * Mostly internal helper for QoaMappingService.
@@ -48,41 +50,41 @@ public class QoaMappingUtil {
 
 	/**
 	 * @param requestQoaConf config corresponding to expectedContextClasses
-	 * @param cpQoaConf config corresponding to actualContextClass
-	 * @param rpQoaConf config for RP - only used for enforcement check
+	 * @param qoaConfig config corresponding to actualContextClass
 	 */
 	@SuppressWarnings("java:S107") // large number of parameters as it's used from static context
-	public static boolean validateCpContextClasses(
+	public static boolean validateContextClass(
 			QoaComparison comparison, List<String> expectedContextClasses, QoaConfig requestQoaConf, // request
-			String actualContextClass, QoaConfig cpQoaConf, // response
-			QoaConfig rpQoaConf, Map<String, Integer> globalMapping, boolean checkOnly) {
+			String actualContextClass, QoaConfig qoaConfig, String issuer,// response
+			Map<String, Integer> globalMapping, boolean checkOnly) {
 
 		if (CollectionUtils.isEmpty(expectedContextClasses)) {
-			log.debug("Missing State expectedCtxClasses cpIssuer={}, skipping AuthnContextClassRef validation", cpQoaConf.issuerId());
+			log.debug("Missing State expectedCtxClasses issuer={}, skipping AuthnContextClassRef validation", qoaConfig.issuerId());
 			return true;
 		}
 
 		if (comparison == null) {
-			log.debug("Missing Qoa comparison cpIssuer={}, skipping AuthnContextClassRef validation", cpQoaConf.issuerId());
+			log.debug("Missing Qoa comparison issuer={}, skipping AuthnContextClassRef validation", qoaConfig.issuerId());
 			return true;
 		}
 
 		if (!StringUtils.hasLength(actualContextClass)) {
 			if (!checkOnly) {
-				missingQoaException(comparison, expectedContextClasses, cpQoaConf, rpQoaConf);
+				missingQoaException(comparison, expectedContextClasses, qoaConfig, requestQoaConf);
 			}
 			return false;
 		}
 
-		Set<Integer> qoaOrders = getQoaOrders(actualContextClass, cpQoaConf, globalMapping, false);
-		Set<Integer> contextClassOrders = expectedContextClasses.stream()
+		var qoaOrders = getQoaOrders(actualContextClass, qoaConfig, globalMapping, false);
+		var contextClassOrders = expectedContextClasses.stream()
 				.flatMap(acClass -> getQoaOrders(acClass, requestQoaConf, globalMapping, false).stream())
 				.collect(Collectors.toSet());
 
-		var isValid = validateQoaComparison(cpQoaConf, comparison, contextClassOrders, qoaOrders);
+		var isValid = validateQoaComparison(qoaConfig, comparison, contextClassOrders, qoaOrders);
 		if (!isValid && !checkOnly) {
-			invalidQoaException(comparison, actualContextClass, expectedContextClasses, cpQoaConf, rpQoaConf);
+			invalidQoaException(comparison, actualContextClass, expectedContextClasses, qoaConfig, issuer);
 		}
+
 		return isValid;
 	}
 
@@ -106,7 +108,7 @@ public class QoaMappingUtil {
 			case MINIMUM -> actualQoas.stream().anyMatch(actualQoa -> actualQoa >= qoaMin);
 			//  the resulting authentication context in the authentication statement MUST be as strong as possible
 			//  (as deemed by the responder) without exceeding the strength of at least one of the authentication contexts specified.
-			case MAXIMUM -> actualQoas.stream().anyMatch(actualQoa -> actualQoa <= qoaMax && actualQoa >= qoaMin);
+			case MAXIMUM -> actualQoas.stream().anyMatch(actualQoa -> actualQoa <= qoaMax);
 			// the resulting authentication context in the authentication statement MUST be stronger (as deemed by the responder)
 			// than any one of the authentication contexts specified.
 			case BETTER -> actualQoas.stream().anyMatch(actualQoa -> actualQoa > qoaMin);
@@ -114,29 +116,38 @@ public class QoaMappingUtil {
 	}
 
 	private static void invalidQoaException(QoaComparison comparison, String actualContextClass,
-			List<String> expectedContextClasses, QoaConfig cpQoaConf, QoaConfig rpQoaConf) {
-		invalidQoaException(comparison, List.of(actualContextClass), expectedContextClasses, cpQoaConf, rpQoaConf);
+			List<String> expectedContextClasses, QoaConfig qoaConfig, String reqIssuer) {
+		invalidQoaException(comparison, List.of(actualContextClass), expectedContextClasses, qoaConfig, reqIssuer);
 	}
 
 	static void invalidQoaException(QoaComparison comparison, List<String> actualContextClasses,
-			List<String> expectedContextClasses, QoaConfig cpQoaConf, QoaConfig rpQoaConf) {
-		if (!cpQoaConf.hasConfig() && !rpQoaConf.hasConfig()) {
+			List<String> expectedContextClasses, QoaConfig qoaConfig, String reqIssuer) {
+		if (!qoaConfig.hasConfig()) {
 			return;
 		}
+
 		var msg = String.format(
-				"Invalid Qoa in request actualCtxClasses=%s cpIssuer=%s expectedCtxClasses=%s comparison=%s rpIssuer=%s",
-				actualContextClasses, cpQoaConf.issuerId(), expectedContextClasses, comparison, rpQoaConf.issuerId());
-		if (enforceQoa(rpQoaConf, cpQoaConf)) {
-			throw new RequestDeniedException(msg);
+				"Invalid Qoa in request actualCtxClasses=%s expectedCtxClasses=%s comparison=%s issuer=%s confIssuer=%s ",
+				actualContextClasses,expectedContextClasses, comparison, reqIssuer, qoaConfig.issuerId());
+		if (enforceQoa(qoaConfig)) {
+			throw new RequestDeniedException(ErrorCode.NO_AUTHN_CONTEXT, msg);
 		}
 		else {
-			log.warn("Qoa.enforce=false: {}", msg);
+			logEnforceWarn(msg);
 		}
 	}
 
+	private static void logEnforceWarn(String msg) {
+		log.warn("Qoa.enforce=false: {}", msg);
+	}
+
+	public static boolean enforceQoa(QoaConfig cpQoaConf) {
+		return cpQoaConf.hasConfig() && cpQoaConf.config().enforce();
+	}
+
 	public static boolean enforceQoa(QoaConfig rpQoaConf, QoaConfig cpQoaConf) {
-		var cpEnforce = cpQoaConf.hasConfig() && cpQoaConf.config().isEnforce();
-		var rpEnforce = rpQoaConf.hasConfig() && rpQoaConf.config().isEnforce();
+		var cpEnforce = cpQoaConf.hasConfig() && cpQoaConf.config().enforce();
+		var rpEnforce = rpQoaConf.hasConfig() && rpQoaConf.config().enforce();
 		return cpEnforce || rpEnforce;
 	}
 
@@ -202,7 +213,7 @@ public class QoaMappingUtil {
 					configQoa.issuerId(), contextClass);
 			return;
 		}
-		if (configQoa.config().isEnforce()) {
+		if (configQoa.config().enforce()) {
 			throw new TechnicalException(
 					String.format("Missing ctxClass=%s in config (HINT: check application.yaml trustbroker.config.qoa"
 							+ " or the SetupRP.xml) for rpIssuer=%s qoaConf=%s", contextClass, configQoa.issuerId(), configQoa));
@@ -220,16 +231,16 @@ public class QoaMappingUtil {
 			return;
 		}
 
-		var cpEnforce = cpQoaConf.hasConfig() && cpQoaConf.config().isEnforce();
-		var rpEnforce = rpQoaConf.hasConfig() && rpQoaConf.config().isEnforce();
+		var cpEnforce = cpQoaConf.hasConfig() && cpQoaConf.config().enforce();
+		var rpEnforce = rpQoaConf.hasConfig() && rpQoaConf.config().enforce();
 
+		var msg = String.format("Missing Qoa in request cpIssuer=%s, expectedCtxClasses=%s comparison=%s rpIssuer=%S",
+				cpQoaConf.issuerId(), expectedContextClasses, comparison, rpQoaConf.issuerId());
 		if (cpEnforce || rpEnforce) {
-			throw new RequestDeniedException(String.format("Missing Qoa in request cpIssuer=%s, expectedCtxClasses=%s "
-					+ "comparison=%s rpIssuer=%S", cpQoaConf.issuerId(), expectedContextClasses, comparison, rpQoaConf.issuerId()));
+			throw new RequestDeniedException(ErrorCode.NO_AUTHN_CONTEXT, msg);
 		}
 		else {
-			log.warn("Qoa.enforce=false. Missing Qoa in request cpIssuer=\"{}\" expectedContextClasses=\"{}\" comparison=\"{}\" "
-					+ "rpIssuer=\"{}\"", cpQoaConf.issuerId(), expectedContextClasses, comparison, rpQoaConf.issuerId());
+			log.warn(msg);
 		}
 	}
 
@@ -270,6 +281,24 @@ public class QoaMappingUtil {
 		return maxQoa;
 	}
 
+	public static Integer getNearestMaxQoaOrder(List<String> classRefs, QoaConfig configQoa, Integer qoaMaxOrder, Map<String, Integer> globalMapping) {
+		if (CollectionUtils.isEmpty(classRefs)) {
+			return CustomQoa.UNDEFINED_QOA_ORDER;
+		}
+		// usually
+		var qoaOrders = classRefs.stream()
+							  .flatMap(contextClass -> getQoaOrders(contextClass, configQoa, globalMapping, null).stream())
+							  .toList();
+		var maxQoa = -1;
+		for (var qoaOrder : qoaOrders) {
+			if (qoaOrder >= maxQoa && qoaOrder <= qoaMaxOrder) {
+				maxQoa = qoaOrder;
+			}
+		}
+		log.debug("issuer={} returned contextClasses={} with max qoa={}", configQoa.issuerId(), classRefs, maxQoa);
+		return maxQoa;
+	}
+
 	public static Set<Integer> getQoaOrders(String classRef, QoaConfig configQoa, Map<String, Integer> globalMapping,
 			Boolean outbound) {
 		var configAcClasses = getConfigAcClasses(classRef, configQoa.config(), outbound);
@@ -292,11 +321,54 @@ public class QoaMappingUtil {
 					"Missing Qoa in config ctxClass=%s issuer=%s, cannot determine order"
 							+ " (HINT: Check trustbroker.config.qoa or SetupRP.xml/SetupCP.xml)",
 					classRef, configQoa.issuerId());
-			if (configQoa.config().isEnforce()) {
+			if (configQoa.config().enforce()) {
 				throw new TechnicalException(msg);
 			}
 			else {
-				log.warn("Qoa.enforce=false: {}", msg);
+				logEnforceWarn(msg);
+			}
+			return Set.of(CustomQoa.UNDEFINED_QOA_ORDER);
+		}
+		return Set.of(level);
+	}
+
+	public static Set<Integer> getQoaOrders(String classRef, QoaConfig inboundQoaConf, QoaConfig outboundQoaConf, Map<String, Integer> globalMapping) {
+		var configAcClasses = getConfigAcClasses(classRef, outboundQoaConf.config(), true);
+		if (!configAcClasses.isEmpty()) {
+			var result = configAcClasses.stream()
+										.map(AcClass::getOrder)
+										.filter(Objects::nonNull)
+										.collect(Collectors.toSet());
+			if (!result.isEmpty()) {
+				return result;
+			}
+		}
+		var level = globalMapping.get(classRef);
+		// mapped Qoa level was not found in the Rp or Global -> Qoa was not mapped, check if the CP config has the level
+		if (level == null) {
+			configAcClasses = getConfigAcClasses(classRef, inboundQoaConf.config(), false);
+			if (!configAcClasses.isEmpty()) {
+				var result = configAcClasses.stream()
+											.map(AcClass::getOrder)
+											.filter(Objects::nonNull)
+											.collect(Collectors.toSet());
+				if (!result.isEmpty()) {
+					return result;
+				}
+			}
+		}
+
+		if (level == null) {
+			// level must be defined in global or RP/CP config
+			var msg = String.format(
+					"Missing Qoa in config ctxClass=%s inboundIssuer=%s outboundIssuer=%s, cannot determine order"
+							+ " (HINT: Check trustbroker.config.qoa or SetupRP.xml/SetupCP.xml)",
+					classRef, inboundQoaConf.issuerId(), outboundQoaConf.issuerId());
+			if (inboundQoaConf.config().enforce() || outboundQoaConf.config().enforce()) {
+				throw new TechnicalException(msg);
+			}
+			else {
+				logEnforceWarn(msg);
 			}
 			return Set.of(CustomQoa.UNDEFINED_QOA_ORDER);
 		}
@@ -351,7 +423,12 @@ public class QoaMappingUtil {
 		if (qoa.isEmpty()) {
 			return Collections.emptyList();
 		}
-		return List.of(qoa.get().getContextClass());
+		var contextClass = qoa.get().getContextClass();
+		if (contextClass == null) {
+			log.info("Ignoring null contextClass"); // no context at this point, context/warning should be logged before
+			return Collections.emptyList();
+		}
+		return List.of(contextClass);
 	}
 
 	private static boolean matchContextClass(AcClass contextClass, List<String> matchContextClasses) {
@@ -385,12 +462,116 @@ public class QoaMappingUtil {
 		if (qoa != null && qoa.getClasses() != null) {
 			List<String> classes = new ArrayList<>();
 			for (AcClass acClass : qoa.getClasses()) {
-				if (acClass.getReplaceInbound()) {
+				if (Boolean.TRUE.equals(acClass.getReplaceInbound())) {
 					classes.add(acClass.getContextClass());
 				}
 			}
 			return Optional.of(classes);
 		}
 		return Optional.empty();
+	}
+
+	public static void rejectRequestIfQoaConfMissing(Qoa qoaConfig, boolean enforceQoaIfMissing, String issuerId) {
+		boolean enforce = (qoaConfig != null && qoaConfig.getEnforce() != null) ? qoaConfig.getEnforce() : enforceQoaIfMissing;
+		boolean rejectRequest = enforce && (qoaConfig == null || qoaConfig.getClasses().isEmpty());
+		if (rejectRequest) {
+			throw new RequestDeniedException(
+					String.format("Missing request context class from request or SetupRp configuration with ID=%s", issuerId));
+		}
+	}
+
+	public static List<String> getDowngradedQoas(List<String> requestQoaList, List<String> mappedQoas, QoaConfig inboundQoaConfig, QoaConfig outboundQoaConfig, Map<String, Integer> globalMapping) {
+		List<String> result = new ArrayList<>();
+		for (String qoaClass : mappedQoas) {
+			// if the Qoa could not be mapped and the order is not in global -> check in the inbound config too
+			var outboundQoaOrders = QoaMappingUtil.getQoaOrders(qoaClass, outboundQoaConfig, inboundQoaConfig, globalMapping);
+			if (!outboundQoaOrders.isEmpty()) {
+				var inboundConfigAcClasses = QoaMappingUtil.getConfigAcClassesByOrders(inboundQoaConfig, outboundQoaOrders, globalMapping, false);
+				var downgradedClasses = getDowngradedClasses(outboundQoaConfig, requestQoaList, inboundConfigAcClasses, qoaClass, outboundQoaOrders, globalMapping);
+				if (!downgradedClasses.isEmpty()) {
+					result.addAll(downgradedClasses);
+				}
+				else {
+					result.add(qoaClass);
+				}
+			} else {
+				log.debug("Could not find order for qoa class={}", qoaClass);
+				result.add(qoaClass);
+			}
+		}
+		return result;
+	}
+
+	static List<String> getDowngradedClasses(QoaConfig outboundQoaConfig, List<String> requestContextClasses,
+											 List<AcClass> inboundConfigAcClasses, String contextClass,
+											 Set<Integer> qoaOrders, Map<String, Integer> globalMapping) {
+		List<String> result = new ArrayList<>();
+		if (requestContextClasses == null || requestContextClasses.isEmpty() || requestContextClasses.contains(contextClass)) {
+			return result;
+		}
+		var qoaMaxOrder = qoaOrders.stream().max(Integer::compareTo).orElse(-1);
+		var maxOutboundQoaOrder = getNearestMaxQoaOrder(requestContextClasses, outboundQoaConfig, qoaMaxOrder, globalMapping);
+
+		if (maxOutboundQoaOrder == -1 || qoaMaxOrder == -1) {
+			return result;
+		}
+
+		// find matching inbound AcClass
+		var acClass = inboundConfigAcClasses.stream().filter(accClass -> qoaMaxOrder > -1 &&
+				getAcClassOrder(accClass, outboundQoaConfig.issuerId(), globalMapping, -1).equals(qoaMaxOrder)).findFirst();
+
+		if (acClass.isPresent() && Boolean.TRUE.equals(acClass.get().getDowngradeToMaximumRequested()) && maxOutboundQoaOrder < qoaMaxOrder) {
+			var qoa = getContextClassByOrder(requestContextClasses, maxOutboundQoaOrder, outboundQoaConfig, globalMapping, true);
+			if (qoa.isPresent()) {
+				result.add(qoa.get());
+				log.debug("Downgrade Qoa={} with order={} to Qoa={} with order={}", contextClass, qoaMaxOrder, qoa.get(), maxOutboundQoaOrder);
+			}
+		}
+		return result;
+	}
+
+	private static Optional<String> getContextClassByOrder(List<String> contextClasses, Integer order, QoaConfig config,
+														   Map<String, Integer> globalMapping, Boolean outBound) {
+		return contextClasses.stream()
+							 .filter(contextClass -> {
+								 var qoaOrders = getQoaOrders(contextClass, config, globalMapping, outBound);
+								 return !qoaOrders.isEmpty() && qoaOrders.contains(order);
+							 })
+							 .findFirst();
+	}
+
+	public static QoaComparison getRpComparison(StateData stateData, Qoa qoa) {
+		var stateComparison = getRpComparison(stateData);
+		if (stateComparison != null) {
+			return stateComparison;
+		}
+		return qoa != null ? qoa.getComparison() : null;
+	}
+
+	public static QoaComparison getRpComparison(StateData stateData) {
+		if (stateData == null || stateData.getSpStateData() == null) {
+			return null;
+		}
+		return stateData.getSpStateData().getComparisonType();
+	}
+
+	public static List<String> getRpContextClasses(StateData stateData, Qoa qoa) {
+		var rpContextClasses = getRpContextClasses(stateData);
+		return getRpContextClasses(rpContextClasses, qoa);
+	}
+
+	public static List<String> getRpContextClasses(List<String> rpContextClasses, Qoa qoa) {
+		if (rpContextClasses != null && !rpContextClasses.isEmpty()) {
+			return rpContextClasses;
+		}
+		return qoa != null && qoa.getClasses() != null ? qoa.getClasses().stream().map(AcClass::getContextClass).toList() : null;
+	}
+
+	public static List<String> getRpContextClasses(StateData stateData) {
+		List<String> contextClasses = new ArrayList<>();
+		if (stateData != null && stateData.getRpContextClasses() != null) {
+			contextClasses.addAll(stateData.getRpContextClasses());
+		}
+		return contextClasses;
 	}
 }
